--- a/Preentrega2/index.html
+++ b/Preentrega2/index.html
@@ -68,12 +68,12 @@
             </div>
            <img src="./img/Aula.jpg" alt="Aula Quilmes">
         </section>
-     <section>
+     <section class="C4">
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id."</p>
-            <img style="background-color:black;" src="./img/Persona.png" alt="Persona Foto">
-            <p>Lorem ipsum dolor sit amet consectetur</p>
+            <img id="Persona" src="./img/Persona.png" alt="Persona Foto">
+            <p id="small">Lorem ipsum dolor sit amet consectetur</p>
         </section>
-        <section>
+        <section class="C5">
             <h2>
                Lorem ipsum dolor sit amet
             </h2>
@@ -92,6 +92,7 @@
                 <li><a href="./pages/ayudanos.html"></li>Ayudanos</a>
             </ul>
         </nav>
+        <hr>
         <p>
             Avenida Pedro Luro 3668, Dorrego & Tomas guido
             <br>
