--- a/Preentrega2/pages/actividades.html
+++ b/Preentrega2/pages/actividades.html
@@ -25,52 +25,60 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>
-                Campo deportivo
-            </h1>
-            <p>
-                El secundario cuenta con un espacio al aire libre preparado para afrontar una gran variedad de actividades deportivas dirigidas por los profesores del secundario. Esto se considera una actividad extracurricular obligatoria que entra en el espectro de la materia Educacion Fisica.
-                La actividad abarca tanto al ciclo inferior como ciclo superior, y los alumnos seran trasladados regularmente por unidades contratadas por el secundario.
-            </p>
+        <section class="C1">
+            <div>
+                <h1>
+                    Campo deportivo
+                </h1>
+                <p>
+                    El secundario cuenta con un espacio al aire libre preparado para afrontar una gran variedad de actividades deportivas dirigidas por los profesores del secundario. Esto se considera una actividad extracurricular obligatoria que entra en el espectro de la materia Educacion Fisica.
+                    La actividad abarca tanto al ciclo inferior como ciclo superior, y los alumnos seran trasladados regularmente por unidades contratadas por el secundario.
+                </p>
+            </div>
             <img src="../img/CampoDeportivo.jpg" alt="Campo deportivo">
         </section>
-        <section>
+        <section class="C1">
             <img src="../img/Natacion.png" alt="Natatorio">
-            <h2>
-                Natación
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor rutrum, dis congue conubia nisi sed sagittis diam urna curabitur placerat. Aliquam cubilia primis auctor ultrices elementum justo pellentesque mauris, egestas integer donec parturient aliquet pharetra imperdiet, praesent convallis porttitor nunc cras ut ultricies. Vehicula dictumst rhoncus dui torquent proin tincidunt, metus vulputate id fames sociis nisl facilisivenenatis maecenas suspendisse nullam Lorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor rutrum, dis congue conubia nisi sed sagittis diam urna curabitur
-            </p>
+            <div>
+                <h2>
+                   Natación
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor rutrum, dis congue conubia nisi sed sagittis diam urna curabitur placerat. Aliquam cubilia primis auctor ultrices elementum justo pellentesque mauris, egestas integer donec parturient aliquet pharetra imperdiet, praesent convallis porttitor nunc cras ut ultricies. Vehicula dictumst rhoncus dui torquent proin tincidunt, metus vulputate id fames sociis nisl facilisivenenatis maecenas suspendisse nullam Lorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor rutrum, dis congue conubia nisi sed sagittis diam urna curabitur
+                </p>
+            </div>
         </section>
-        <section>
-            <h2>
-                Intertribus
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor rutrum, dis congue conubia nisi sed sagittis diam urna curabitur placerat. Aliquam cubilia primis auctor ultrices elementum justo pellentesque mauris, egestas integer donec parturient aliquet pharetra imperdiet, praesent convallis porttitor nunc cras ut ultricies. Vehicula dictumst rhoncus dui torquent proin tincidunt, metus vulputate id fames sociis nisl facilisivenenatis maecenas suspendisse nullamLorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor
-            </p>
+        <section class="C1">
+            <div>
+                <h2>
+                    Intertribus
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor rutrum, dis congue conubia nisi sed sagittis diam urna curabitur placerat. Aliquam cubilia primis auctor ultrices elementum justo pellentesque mauris, egestas integer donec parturient aliquet pharetra imperdiet, praesent convallis porttitor nunc cras ut ultricies. Vehicula dictumst rhoncus dui torquent proin tincidunt, metus vulputate id fames sociis nisl facilisivenenatis maecenas suspendisse nullamLorem ipsum dolor sit amet consectetur adipiscing elit class euismod tempor
+                </p>
+            </div>
             <img src="../img/Intertribus.png" alt="Tribu Blanca">
         </section>
-        <section>
+        <section class="C6">
             <h2>
                 Otras actividades relevantes
             </h2>
             <ul>
-                <li>
-                    <p>
-                        El secundario participa de las competencias intercolegiales de básquet, fútbol, voley y handball
-                    </p>
-                </li>
+                <div>
+                    <li>
+                        <p>
+                            El secundario participa de las competencias intercolegiales de básquet, fútbol, voley y handball
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Los estudiantes de 4to y 5to año comparten una experiencia educativa y recreativa en algun punto de Argentina
+                        </p>
+                    </li>
+                </div>
                 <li>
                     <p>
                         Los estudiantes tendran la posibilidad de participar de salidas educativas. Las mismas pueden abarcar cualquier tema relevante para la educacion del estudiante. 
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Los estudiantes de 4to y 5to año comparten una experiencia educativa y recreativa en algun punto de Argentina
                     </p>
                 </li>
             </ul>
@@ -86,6 +94,7 @@
                 <li><a href="ayudanos.html"></li>Ayudanos</a>
             </ul>
         </nav>
+        <hr>
         <p>
             Avenida Pedro Luro 3668, Dorrego & Tomas guido
             <br>
