--- a/Preentrega2/pages/ayudanos.html
+++ b/Preentrega2/pages/ayudanos.html
@@ -26,29 +26,31 @@
     </header>
     <main>
         <section>
+            <div class="C9">
         <h1>
             Ayudanos dejando tu comentario
         </h1>
         <p>
             Debajo de este texto encontraras una seccion para dejar comentarios relacionados con la institucion.
         </p>
-        <form>
-            <div class="Nombre1">
+            </div>
+        <form class="Form1" id="FormCenter">
+            <div class="Nombre">
                 <label for="Nombre">Nombre</label>
                 <input type="text" name="Nombre" required>
-            </div>
-            <div class="Apellido1">
+           </div>
+            <div class="Apellido">
                 <label for="Apellido">Apellido</label>
                 <input type="text" name="Apellido" required>
-            </div>
-            <div class="E-mail1">
+        </div>
+            <div class="E-mail">
                 <label for="E-mail">E-mail</label>
                 <input type="email" name="E-mail" required>
             </div>
-            <div class="Telefono1">
+            <div class="Telefono">
                 <label for="Telefono">Telefono</label>
                 <input type="tel" name="Telefono" required>
-            </div>    
+            </div> 
             <div id="Comentario">
                 <label for="Comentario">Comentario</label>
                 <input type="text" name="Comentario" required>
@@ -67,6 +69,7 @@
                 <li><a href="ayudanos.html"></li>Ayudanos</a>
             </ul>
         </nav>
+        <hr>
         <p>
             Avenida Pedro Luro 3668, Dorrego & Tomas guido
             <br>
