--- a/Preentrega2/pages/nosotros.html
+++ b/Preentrega2/pages/nosotros.html
@@ -25,38 +25,44 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="C1">
+            <div>
             <h1>
                 Acerca del club
             </h1>
             <p>
                 Somos un club social, deportivo y académico de excelencia, con 100 años de trayectoria. Buscamos fomentar la actividad física a través del deporte, desarrollar atletas de alto rendimiento, profesores de educación física de reconocimiento a nivel nacional, y sobre todo brindar un espacio de pertenencia, encuentro y contención para toda la familia.
             </p>
+            </div>
             <img src="../img/ClubBasquet.png" alt="Basquet Masculino">
         </section>
     <!--//////////////////////////////////////////////////////////-->
-        <section>
-            <img src="../img/PelotaBasquet.jpg" alt="Pelota de Basquet">
+        <section class="CN1">
+            <img src="../img/PelotaBasquet.jpg" alt="Pelota de Basquet" id="Pelota">
+            <div>
             <p>
                 El Club Atlético Quilmes de Mar del Plata fue fundado en 1922 por un grupo de amigos llamados "Los Pibes de la estación".
 Adoptaron el nombre "Quilmes" por su cercanía a la fábrica de Cerveza Quilmes y los colores de su camiseta fueron influenciados por una donación inicial.
 Desde entonces, ha destacado en actividades deportivas, sociales y culturales, con el fútbol como su deporte principal.
             </p>
+            </div>
         </section>
     <!--//////////////////////////////////////////////////////////-->
-        <section>
-            <p>
-                En la década del '30, el básquet fue incorporado y ganó ímpetu con la fundación de la Asociación Marplatense de Básquetbol.
-                En 1947, Quilmes logró su primer éxito local en este deporte.
-                A lo largo de la historia, el fútbol y el básquet han sido las disciplinas más constantes en el club.
-                Además, se han practicado una variedad de deportes como atletismo, tiro con arco, bochas, bowling y esgrima en diferentes momentos.
-                En la actualidad, la gimnasia artística es la disciplina estandarte del club, con una escuela de primer nivel y representación en eventos internacionales.
-                El hockey y las artes marciales también forman parte de la oferta deportiva actual del club.
-            </p>
+        <section class="C1" id="CN1">
+            <div>
+                <p>
+                    En la década del '30, el básquet fue incorporado y ganó ímpetu con la fundación de la Asociación Marplatense de Básquetbol. <br>
+                    En 1947, Quilmes logró su primer éxito local en este deporte. <br>
+                    A lo largo de la historia, el fútbol y el básquet han sido las disciplinas más constantes en el club. <br>
+                    Además, se han practicado una variedad de deportes como atletismo, tiro con arco, bochas, bowling y esgrima en diferentes momentos. <br>
+                    En la actualidad, la gimnasia artística es la disciplina estandarte del club, con una escuela de primer nivel y representación en eventos internacionales. <br>
+                    El hockey y las artes marciales también forman parte de la oferta deportiva actual del club.
+                </p>
+            </div>
             <img src="../img/Basquetclub.png" alt="Club de Quilmes">
         </section>
     <!--//////////////////////////////////////////////////////////-->
-        <section>
+        <section class="C6">
             <h2>
                 Acerca del secundario
             </h2>
@@ -84,6 +90,7 @@ Desde entonces, ha destacado en actividades deportivas, sociales y culturales, c
                 <li><a href="ayudanos.html"></li>Ayudanos</a>
             </ul>
         </nav>
+        <hr>
         <p>
             Avenida Pedro Luro 3668, Dorrego & Tomas guido
             <br>
